Updated CSS - fixed background not showing on index/login page problem

--- a/ProgramImplementation/WebFiles/styles.css
+++ b/ProgramImplementation/WebFiles/styles.css
@@ -15,6 +15,7 @@
 
 html, body{
     font-size: 30px;
+    height: 100%;
 }
 
 /*Body*/
@@ -312,7 +313,6 @@ footer{
     text-align: center;
     height: 100px;
     position: relative;
-    box-shadow: 0px 500px 0px 500px #8f89a9;
 }
 
 footer p{
